[package]
name = "abbrws"
version = "0.1.0"
repository = "https://github.com/robohouse-delft/abbrws-rs"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]
edition = "2018"

[dependencies]
digest_auth = "0.2.1"
future-utils = "0.12.1"
http = "0.2.0"
hyper = "0.13.1"
serde_json = "1.0.44"
tokio = { version="0.2.9", features=["rt-threaded", "macros"] }
