[package]
name = "abbrws-utils"
version = "0.1.0"
repository = "https://github.com/robohouse-delft/abbrws-rs"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]
edition = "2018"

[dependencies]
abbrws = { version="0.1.0", path = ".." }
tokio = { version="0.2.9", features=["rt-threaded", "macros"] }
structopt = "0.3.8"
yansi = "0.5.0"
