[package]
name = "abbrws"
version = "0.1.0"
license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/robohouse-delft/abbrws-rs"
authors = [
	"Maarten de Vries <maarten@de-vri.es>",
	"RoboHouse <robohouse@robovalley.com>",
]
edition = "2018"

[dependencies]
cookie = "0.16.0"
digest_auth = "0.3.0"
http = "0.2.0"
hyper = { version = "0.14.19", features = ["client", "http1", "tcp"] }
mime = "0.3.16"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"

[dev-dependencies]
assert2 = "0.3.3"
